assets/css/report_clinical.css
body {
  background-color: white;
  font-family: "Roboto", sans-serif;
  color: black;
}
.title-container {
  width: 1340px;
}
#big-title {
  width: 800px;
  font-size: 20pt;
  margin: 10px 10px;
  margin-left: 30px;
  float: left;
}
#date-title {
  width: 450px;
  font-size: 14pt;
  margin: 15px 10px;
  text-align: right;
  float: right;
}

.hist-container {
  width: 300px;
  margin-left: 10px;
  padding: 0px;
  border: 0px;
  float: left;
}
.map-container {
  width: 750px;
  height: 600px;
  padding: 0px;
  border: 0px;
  margin: 0px;
  float: left;
  background: black;
}
.table-container {
  width: 300px;
  margin-right: 10px;
  font-size: 12pt;
  float: left;
}
.hist-tile {
  width: 300px;
  height: 200px;
  padding: 0px;
  margin: 0px;
  border: 0px;
  float: left;
}
h2 {
  font-size: 12pt;
  color: black;
}
.map-tile {
  width: 710px;
  color: white;
  border: 0px;
  margin-left: 5px;
  margin-top: 5px;
  margin-bottom: 20px;
  padding: 0px;
  overflow: hidden;
  float: left;
}
.colorbar-tile {
  margin-top: 10px;
  width: 10px;
  float: left;
}
.space {
  height: 35px;
}
/* Overlay container */
.top-right {
  position: relative;                 /* keep relative if you prefer */
  transform: translate(-30px, -180px);
  display: flex;                       /* two explicit columns */
  width: 230px;                        /* ensure space for 2 cols */
  max-width: 100%;
  color: #353131;
}

.predict-values {
  position: relative;
  bottom: 20px;
  left: 20px;
  color: white;
}
td,
th {
  border: 2px solid #353131;
  text-align: left center;
  padding: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
}
table {
  table-layout: fixed;
  height: 598px;
  width: 100%;
  table-layout: fixed; /
}
tr.ven {
  background-color: #cce5ff;
}
tr.membrane {
  background-color: #ccffcc;
}
tr.rbc {
  background-color: #ffcccc;
}
tr.basic {
  background-color: #e0e0e0;
}
tr.title {
  color: white;
  background-color: #606060;
}
th, td {
  overflow: hidden;
  text-overflow: ellipsis;
}

